# opendata_C2023

./: .gitignore  README.md  docker-compose.prod.yaml  docker-compose.yaml  postgresql.conf  pyproject.toml  requirements.txt
.streamlit/: config.toml
apps/_plot/: IoTボタン押下output.csv  event_rate_2023-05-07_18-28-47.csv  event_type_rate_2023-05-07_18-28-47.csv  output.csv  plot.py  一時不停止output.csv  前方不注意output.csv  急ハンドルoutput.csv  急加速output.csv  急減速output.csv  緊急ボタン押下output.csv  脇見output.csv  衝撃output.csv  車間距離不足output.csv  車間距離警報output.csv  速度超過output.csv
apps/plot/: plot.py
apps/stat/: stat.py
apps/train/: csv_data.py  trial01.py  trial01_1.py  trial01_2.py  trial01_3.py  trial01_4.py  trial01_5.py  trial03_2.py
apps/web/: Demo.py  infer.py  inference_demo.py  server.py
apps/web/pages/: 10_incidents_map_Sep.py  11_incidents_map_Oct.py  12_incidents_map_Nov.py  13_incidents_map_Dec.py  1_Incidents_map.py  1_incidents_map.py  1_incidents_map_Apr.py  1_incidents_map_Jul.py  1_incidents_map_Jun.py  1_incidents_map_Mar.py  1_incidents_map_Oct.py  1_incidents_map_Sep.py  1_map.py  2_incidents_map_Jan.py  2_slide.py  2_slides.py  3_incidents_map_Feb.py  4_incidents_map_Mar.py  (+5 more)
docker/: Dockerfile
docker/scripts/: Dockerfile
docker/web/: Dockerfile  Dockerfile.prod
env/: .env.example
scripts/: collect.py  copy_vitals.sh  create_dataset.sql  fetch.py
scripts/init/: 01_create_table.sql  02_create_temp_tables.sql  03_load_data.sh  04_insert_data.sql  05_set_constraint.sql
scripts/sql/: create_table.sql  def_procedure.sql  insert_master.sql  insert_vital.sql
