[tool.poetry]
name = "opendata-c2023"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "opendata_c2023"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
python-dotenv = "^0.21.0"
polars = "^0.17.7"


[tool.poetry.group.dev.dependencies]
pylint-quotes = "^0.2.3"
black = "^22.12.0"
mypy = "^0.991"
types-requests = "^2.28.11.8"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
